--- a/content/ictc2020.md
+++ b/content/ictc2020.md
@@ -7,14 +7,14 @@ title: ICTC 3104.3 Data Analytics and Big Data
 
 1) Introduction and Basics of R Programming
 
->   📚 [Slides](/slides/ictc2020_l1.html) 💻 Lab-work  🔖 [Cheat sheet](/Cheatsheets/base-r.pdf)
+>   📚 [Slides](/slides/ictc2020_l1.html) 💻 Lab-work - slides 🔖 [Cheat sheet](/Cheatsheets/base-r.pdf)
 
 2) Data Import and Data Wrangling with R
 
-> 📚 [Slides](/slides/ictc2020_l2.html)   💻 Lab-work  🔖 [Cheat sheet](/Cheatsheets/data-wrangling-cheatsheet.pdf) 
+> 📚 [Slides](/slides/ictc2020_l2.html)   💻 Lab-work - slides 🔖 [Cheat sheet](/Cheatsheets/data-wrangling-cheatsheet.pdf) 
 
 
 3) Data Visualisation with R
 
-> 📚 Slides  💻 Lab-work  🔖 [Cheat sheet](/Cheatsheets/ggplot2-cheatsheet.pdf) 
+> 📚 [Slides]((/slides/ictc2020_l2.html))  💻 Lab-work - slides 🔖  [Cheat sheet - 1](https://dcgerard.github.io/stat_412_612/lectures/03_graphics/03_qplot_cheatsheet.pdf) [Cheat sheet - 2](/Cheatsheets/ggplot2-cheatsheet.pdf) 
 
