--- a/content/ictc2020.md
+++ b/content/ictc2020.md
@@ -18,3 +18,12 @@ title: ICTC 3104.3 Data Analytics and Big Data
 
 > 📚 [Slides](/slides/ictc2020_l3.html)  💻 Lab-work - slides 🔖  [Cheat sheet - 1](https://dcgerard.github.io/stat_412_612/lectures/03_graphics/03_qplot_cheatsheet.pdf) [Cheat sheet - 2](/Cheatsheets/ggplot2-cheatsheet.pdf) 
 
+## Individual assignment 
+
+[Details here](https://edify-thiyanga.netlify.app/slides/ictc2020_l3.html#29)
+
+Due date: 17 September 2020
+
+Submit .Rmd file and HTML file
+
+Data set: [Data-facebookdata_marketing.rds](/static/data/facebookdata_marketing.rds)
