--- a/content/reg2020.md
+++ b/content/reg2020.md
@@ -7,4 +7,5 @@ title: 📚
 
 
 1.   📚 [Slide 1: Introduction to regression analysis](/regression/regression1.html) 
-2.   📚 [Slide 2: Introduction to regression analysis](/regression/regression2.html)
+2.   📚 [Slide 2: Simple Linear Regression](/regression/regression2.html)
+3. [Tutorial 1](/regression/tutorial_1.pdf)
