--- a/content/reg2020.md
+++ b/content/reg2020.md
@@ -9,3 +9,4 @@ title: 📚
 1.   📚 [Slide 1: Introduction to regression analysis](/regression/regression1.html) 
 2.   📚 [Slide 2: Simple Linear Regression](/regression/regression2.html)
 3. [Tutorial 1](/regression/tutorial_1.pdf)
+4. 📚 [Slide 3: Simple Linear Regression](/regression/regression3.html)
