--- a/content/reg2020.md
+++ b/content/reg2020.md
@@ -10,3 +10,4 @@ title: 📚
 2.   📚 [Slide 2: Simple Linear Regression](/regression/regression2.html)
 3. [Tutorial 1](/regression/tutorial_1.pdf)
 4. 📚 [Slide 3: Simple Linear Regression](/regression/regression3.html)
+5. 📚 [Basics of R Programming](/regression/regression5.html)
