--- a/content/reg2020.md
+++ b/content/reg2020.md
@@ -13,4 +13,4 @@ title: 📚
 5. 📚 [Slide 4: Simple Linear Regression](/regression/regression4.html)
 6. 📚 [Basics of R Programming](/regression/regression5.html)
 7. 📚 [Regression Analysis with R](/regression/SimpleLinearRegression2.html)
-8. [Data][/regression/house.csv]
+8. [house.csv](/regression/house.csv)
