--- a/public/regression/regression3.Rmd
+++ b/public/regression/regression3.Rmd
@@ -305,7 +305,7 @@ $SS_M$ - Explained variation attributable to factors other than the relationship
 
 Notation: $SS_{R}$ or $SS_{E}$ - A measure of the variability in $y$ remaining after $x$ has been considered.
 
-$R^2$ - Proportion of variation explained by the regressor $x$.
+$R^2$ - Proportion of variation in $Y$ explained by the relation relationship of $Y$ with $x$.
 
 
 ---
