--- a/static/regression/regression3.Rmd
+++ b/static/regression/regression3.Rmd
@@ -314,7 +314,7 @@ $R^2$ - Proportion of variation in $Y$ explained by the relation relationship of
 
 $$0 \leq R^2 \leq 1$$.
 
-Values of $R^2$ that are close to 1 imply that most of the variability in $y$ is explained by the regression model.
+Values of $R^2$ that are close to 1 imply that most of the variability in $Y$ is explained by the regression model.
 
 $R^2$ should be interpreted with caution. (We will talk more on this in multiple linear regression analysis)
 
