--- a/content/reg2020.md
+++ b/content/reg2020.md
@@ -14,4 +14,5 @@ title: 📚
 6. 📚 [Basics of R Programming](/regression/regression5.html)
 7. 📚 [Regression Analysis with R](/regression/SimpleLinearRegression2.html)
 8. [house.csv](/regression/house.csv)
-6. [Tutorial 2](/regression/tutorial2.pdf)
+9. [Tutorial 2](/regression/tutorial2.pdf)
+10. [Other software](/regression/othersoftware.html)
