serve site with multiple linear regression

--- a/content/reg2020.md
+++ b/content/reg2020.md
@@ -16,3 +16,5 @@ title: 📚
 8. [house.csv](/regression/house.csv)
 9. [Tutorial 2](/regression/tutorial2.pdf)
 10. [Other software](/regression/othersoftware.html)
+11. [heart.data.csv](/regression/heart.data.csv)
+12. 📚 [Multiple Linear Regression](/regression/regression6.html)
