--- a/content/ictc2020.md
+++ b/content/ictc2020.md
@@ -27,3 +27,5 @@ Due date: 17 September 2020
 Submit .Rmd file and HTML file
 
 Data set: [Data-facebookdata_marketing.rds](/static/data/facebookdata_marketing.rds)
+
+[*](/static/ISF2020/ISF_2020_Thiyanga_S_Talagala.html)
