link new slides

--- a/content/reg2020.md
+++ b/content/reg2020.md
@@ -19,3 +19,6 @@ title: 📚
 11. [heart.data.csv](/regression/heart.data.csv)
 12. 📚 [Multiple Linear Regression](/regression/regression6.html)
 13. 📚 [ANOVA](/regression/regression7.html)
+14. 📚 [Confidence Intervals in Multiple Regression](/regression/regression8.html)
+15. 📚 [Transformations to Correct Model Inadequacies](/regression/regression9.html)
+16. 📚 [Identifying Outliers and Influential Cases](/regression/regression10.html)
