--- a/public/regression/regression9.Rmd
+++ b/public/regression/regression9.Rmd
@@ -363,7 +363,7 @@ https://www2.stat.duke.edu/courses/Spring20/sta210.001/slides/lec-slides/09-tran
 
 ## Confidence interval for $\beta_j$
 
-The confidence interval for the coefficient of $x$ describing its relationship with $log(Y)$ is:
+The confidence interval for the coefficient of $x$ describing its relationship with $Y$ is:
 
 - Confidence intervals $\beta_0$
 
@@ -381,6 +381,9 @@ confint(salary_fit_log, level=0.95)
 ---
 
 ## Confidence interval for $\beta_j$ - backtransform
+
+
+The confidence interval for the coefficient of $x$ describing its relationship with $log(Y)$ is:
 
 - Confidence intervals $\beta_0$
 
